--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@react-three/drei": "^9.116.2",
+    "@react-three/fiber": "^8.17.10",
+    "aws-amplify": "^6.8.2",
+    "jsdom": "^25.0.1",
+    "next": "15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "three": "^0.170.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
